objects/redwing__ILT_Roster__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Grade__c</fullName>
        <label>Grade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__ILT_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ILT Class</label>
        <referenceTo>redwing__ILT_Class__c</referenceTo>
        <relationshipLabel>ILT Rosters</relationshipLabel>
        <relationshipName>ILT_Rosters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__ILT_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ILT Session</label>
        <referenceTo>redwing__ILT_Session__c</referenceTo>
        <relationshipLabel>ILT Rosters</relationshipLabel>
        <relationshipName>ILT_Rosters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Assignment__c</fullName>
        <label>Learning Assignment</label>
        <referenceTo>redwing__Learning_Assignment__c</referenceTo>
        <relationshipLabel>ILT Rosters</relationshipLabel>
        <relationshipName>ILT_Rosters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redwing__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ILT_Rosters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ILT Roster</label>
    <nameField>
        <displayFormat>RSTR-{00000000}</displayFormat>
        <label>ILT Roster Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ILT Rosters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>